--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
 <title>SilentSine- Home</title>
-<h1>im good at html, this is just a placeholder for now cuz im tired. its 12:33 am as of now, and i need dat sleep</h1>
+<link rel="stylesheet" href="https://permablock123456789.glitch.me/website.css">
+<link rel="stylesheet" href="https://permablock123456789.glitch.me/web2.css">
+<div style="text-align: center">
+ <body style="background-color: #0b2a3e">
+ <img src="https://silentsine.github.io/images/header.gif" width="100%">
+</body>
+</div>
+<hr>
+<div style="text-align: center">
+<h1 style="color: white">
+Welcome to SilentSine Unblocking!
+</h1>
+</div>
+<div style="text-align: center">
+<h3 style="color: white">
+sadly nothing here yet. D:
+</h3>
+</div>
