--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <link rel="stylesheet" href="https://permablock123456789.glitch.me/website.css">
 <link rel="stylesheet" href="https://permablock123456789.glitch.me/web2.css">
 <div style="text-align: center">
- <body style="background-color: #0b2a3e">
- <img src="https://silentsine.github.io/images/header.gif" width="80%">
+<body style="background-color: #0b2a3e">
+<div style="text-align: center">
+<img src="https://silentsine.github.io/images/header.gif" width="80%">
+</div>
 </body>
 </div>
 <hr>
