--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <link rel="stylesheet" href="https://permablock123456789.glitch.me/web2.css">
 <div style="text-align: center">
 <body style="background-color: #0b2a3e">
-<div style="text-align: center">
+<center>
 <img src="https://silentsine.github.io/images/header.gif" width="80%">
-</div>
+</center>
 </body>
 </div>
 <hr>
