--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>SilentSine- Home</title>
+<title>about:blank</title>
 <link rel="stylesheet" href="https://permablock123456789.glitch.me/website.css">
 <link rel="stylesheet" href="https://permablock123456789.glitch.me/web2.css">
 <div style="text-align: center">
